--- a/src/widgets/workflow-tools/workflow-tools.ui.scss
+++ b/src/widgets/workflow-tools/workflow-tools.ui.scss
@@ -3,7 +3,7 @@
 @use "sass/mixin";
 @use "sass/animation";
 
-.WorkflowEditorMenu {
+.WorkflowTools {
     position: fixed;
     top: size.$gap;
     right: size.$gap;
