--- a/src/widgets/automation-tools/automation-tools.ui.scss
+++ b/src/widgets/automation-tools/automation-tools.ui.scss
@@ -3,7 +3,7 @@
 @use "sass/mixin";
 @use "sass/animation";
 
-.WorkflowTools {
+.AutomationTools {
     position: fixed;
     top: size.$gap;
     right: size.$gap;
