--- a/src/features/propose-automation/propose-automation.ui.scss
+++ b/src/features/propose-automation/propose-automation.ui.scss
@@ -4,7 +4,7 @@
 @use "sass/mixin";
 @use "sass/font";
 
-.WorkflowExport {
+.ProposeAutomation {
     @include mixin.full;
     @include mixin.no-scrollbar;
     display: flex;
