fix: builder styling

--- a/src/features/workspace-builder/workspace-builder.ui.scss
+++ b/src/features/workspace-builder/workspace-builder.ui.scss
@@ -3,7 +3,7 @@
 @use "sass/color";
 @use "sass/base";
 
-.TaskCardsList {
+.WorkspaceBuilder {
     @include mixin.center-items(flex-start);
     gap: size.$gap;
 
