--- a/src/entities/job/job.ui.scss
+++ b/src/entities/job/job.ui.scss
@@ -4,6 +4,22 @@
 @use "sass/size";
 
 .Job {
+    &-action {
+        align-self: flex-end;
+        border: 2px solid color.$blue;
+        border-radius: size.$task-radius;
+        padding: 0 1em;
+        width: fit-content;
+        background-color: rgba(color.$blue, 0.2);
+        color: darken(color.$blue, 30%) !important;
+        font-size: size.$text;
+        font-weight: 800;
+
+        &:hover {
+            background-color: color.$blue;
+        }
+    }
+
     &-dataInspector {
         &-label {
             width: fit-content;
@@ -11,20 +27,31 @@
         }
     }
 
-    &-action {
-        margin-top: 0.5 * size.$gap;
-        margin-left: 0.5 * size.$gap;
-        padding: 0 1em;
-        border-radius: size.$task-radius;
-        border: 2px solid color.$blue;
-        font-size: size.$text;
-        font-weight: 800;
-        color: darken(color.$blue, 30%) !important;
-        background-color: rgba(color.$blue, 0.2);
-        float: right;
+    &-multicalls {
+        display: flex;
+        flex-flow: column nowrap;
+        gap: size.$gap * 0.5;
 
-        &:hover {
-            background-color: color.$blue;
+        &-inspector {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-evenly;
+            gap: size.$gap * 0.5;
+        }
+
+        &-item {
+            display: flex;
+            flex-flow: column nowrap;
+            gap: size.$gap * 0.5;
+            border: 2px solid color.$white;
+            border-radius: size.$task-radius;
+            padding: size.$gap * 0.5;
+            min-width: 264px;
+            height: fit-content;
+
+            &-label {
+                position: absolute;
+            }
         }
     }
 }
