--- a/src/widgets/builder/builder.scss
+++ b/src/widgets/builder/builder.scss
@@ -14,13 +14,15 @@
         flex: 1;
         width: 100%;
         position: relative;
+        box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
+        border-radius: size.$task-radius;
     }
     &-selector {
         @include mixin.no-scrollbar;
         position: absolute;
         left: 0;
         z-index: 2;
-        width: size.$task-width;
+        width: 100%;
         max-height: 100%;
         overflow-y: scroll;
         border-radius: size.$task-radius;
@@ -32,8 +34,10 @@
             background-color: transparent !important;
             .tasks-wrapper {
                 flex: 1 1 0;
-                box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
-                .task-wrapper:last-of-type {
+                flex-flow: row wrap;
+                gap: size.$gap;
+                box-shadow: none;
+                .task-wrapper {
                     margin-bottom: 0 !important;
                 }
                 .icon {
