--- a/src/families/meta-pool/meta-pool.scss
+++ b/src/families/meta-pool/meta-pool.scss
@@ -14,6 +14,9 @@ $meta-pool-purple: #735de9;
     background-repeat: no-repeat;
     background-size: 12rem;
     @include base.task-theme(color.$light-text);
+    * > a {
+        color: darken(color.$blue, 20%) !important;
+    }
 }
 
 .meta-pool-nslp-add-liquidity-task-edit,
