--- a/src/families/mintbase/mintbase.scss
+++ b/src/families/mintbase/mintbase.scss
@@ -17,6 +17,9 @@ $mintbase-red: #ff2424;
     background-position-y: 239rem;
     background-size: 77rem;
     @include base.task-theme(color.$light-text);
+    * > a {
+        color: darken(color.$blue, 20%) !important;
+    }
 }
 
 .mintbase-add-minter-task-edit,
