--- a/src/entities/proposal/proposal-kinds/default.scss
+++ b/src/entities/proposal/proposal-kinds/default.scss
@@ -55,6 +55,7 @@
             content: "Description:";
             padding-right: 1ch;
             opacity: 0.3;
+            word-break: break-word;
         }
     }
 
